--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "@types/graphql-depth-limit": "^1.1.2",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.7.21",
+    "@types/mongoose-unique-validator": "^1.0.4",
     "@types/node": "^14.0.9",
     "apollo-server-express": "^2.14.1",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "http": "^0.0.1-security",
     "moment": "^2.26.0",
     "mongoose": "^5.9.16",
+    "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.3"
